feat: improve skill and worker package flows
Signed-off-by: zhaoh <yanyan.zh@alibaba-inc.com>